# cinnamon-settings-daemon

./: configure.ac
data/: Makefile.am  org.cinnamon.settings-daemon.plugins.sharing.gschema.xml.in.in
plugins/sharing/: Makefile.am  cinnamon-settings-daemon-sharing.desktop.in  csd-sharing-manager.c  main.c
